force-app/main/default/objects/NMC_Split_System__c/NMC_Split_System__c.object-meta.xml
<CustomObject>
    <label>NMC Split System</label>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>NMC Split System ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NMC Split Systems</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>