force-app/main/default/objects/NMC_Split_System__c/fields/NMC_Account__c.field-meta.xml
<CustomField>
    <fullName>NMC_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NMC Account</label>
    <referenceTo>NMC_Account__c</referenceTo>
    <relationshipName>NMC_Split_System</relationshipName>
    <type>Lookup</type>
</CustomField>