force-app/main/default/objects/NMC_Split_System__c/fields/Prod_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Prod_Record_ID__c</fullName>
    <externalId>true</externalId>
    <label>Prod Record ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>